--- a/public/assets/sass/style.scss
+++ b/public/assets/sass/style.scss
@@ -46,3 +46,6 @@
 @import "shortcode/product-tabs";
 @import "shortcode/related-products";
 @import "shortcode/product-immersive";
+@import "shortcode/sitemap";
+@import "shortcode/privacy-policy";
+@import "shortcode/terms-conditions";
